fixed scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,6 @@ h3 {
   grid-template-columns: repeat(4, fit-content(400px));
   margin-top: 20px;
   padding: 0 30px 0 15px;
-  overflow: scroll;
 }
 
 .sub-nav-link {
@@ -683,6 +682,13 @@ h3 {
 @media (max-width: 767.98px) {
   .repo-search-result {
     width: auto;
+  }
+  .hero-search-grid {
+    grid-template-columns: auto;
+    row-gap: 10px;
+  }
+  .sub-nav-border {
+    overflow: scroll;
   }
 }
 
